# whisp

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  _typos.toml  shell.nix
.github/workflows/: ci.yaml
crates/whisp-audio/: Cargo.toml
crates/whisp-audio/src/: lib.rs
crates/whisp-core/: Cargo.toml
crates/whisp-core/src/: config.rs  lib.rs
crates/whisp-transcribe/: Cargo.toml
crates/whisp-transcribe/src/: lib.rs  local.rs  model.rs  openai.rs
src/: audio.rs  color.rs  config.rs  config_ext.rs  event.rs  icon.rs  lib.rs  models.rs  notify.rs  paste.rs  process.rs  record.rs  transcribe.rs  whisp.rs
src/core/: config.rs  event.rs  state.rs
src/transcribe/: local.rs  mod.rs  model.rs  openai.rs
