[package]
name = "whisp"
version = "0.1.3"
edition = "2021"
description = "Unobtrusive global speech-to-text"
license = "MIT"
repository = "https://github.com/cgbur/whisp"
homepage = "https://github.com/cgbur/whisp"
documentation = "https://docs.rs/whisp"
keywords = ["speech-to-text", "transcribe", "dictation"]
categories = ["accessibility"]
readme = "README.md"

[[bin]]
path = "src/whisp.rs"
name = "whisp"

[dependencies]
anyhow = "1.0.89"
arboard = { version = "3.4.1", default-features = false }
cpal = "0.15.3"
dirs = "5.0.1"
enigo = "0.2.1"
global-hotkey = { version = "0.6.2", features = ["serde"] }
hound = "3.5.1"
image = { version = "0.25.2", default-features = false, features = ["png"] }
notify-rust = "4.11.3"
parking_lot = "0.12.3"
reqwest = { version = "0.12.8", features = ["json", "multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
tao = "0.30.3"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tray-icon = "0.19.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"

[dev-dependencies]
tempfile = "3.13.0"

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
