[package]
name = "whisp"
version = "0.4.0"
edition = "2024"
description = "Unobtrusive global speech-to-text"
license = "MIT"
repository = "https://github.com/cgbur/whisp"
homepage = "https://github.com/cgbur/whisp"
documentation = "https://docs.rs/whisp"
keywords = ["speech-to-text", "transcribe", "dictation"]
categories = ["accessibility"]
readme = "README.md"

[[bin]]
path = "src/whisp.rs"
name = "whisp"

[dependencies]
# Core
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio
cpal = "0.15"
hound = "3.5"

# Config
dirs = "5.0"
toml = "0.8"

# HTTP
bytes = "1"
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
futures-util = "0.3"

# UI/System integration
arboard = { version = "3.4", default-features = false }
enigo = "0.2"
global-hotkey = { version = "0.6", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
notify-rust = "4.11"
tao = "0.30"
tray-icon = "0.19"

# Local whisper (optional)
sha1 = { version = "0.10", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
whisper-rs = { version = "0.15.1", optional = true, features = ["tracing_backend", "metal", "coreml"] }
zip = { version = "7", optional = true, default-features = false, features = ["deflate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.15.1", optional = true, features = ["tracing_backend"] }

[dev-dependencies]
tempfile = "3.13"

[features]
default = []
local-whisper = ["dep:whisper-rs", "dep:sha1", "dep:zip"]

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
