[package]
name = "whisp-core"
version = "0.1.0"
edition.workspace = true
description = "Core types and configuration for whisp"
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
