[package]
name = "whisp-transcribe"
version = "0.1.0"
edition.workspace = true
description = "Transcription backend for whisp"
license.workspace = true
publish = false

[features]
default = []
local-whisper = ["dep:whisper-rs", "dep:hound", "dep:sha1"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
whisp-core.workspace = true

# Optional dependencies for local whisper
hound = { workspace = true, optional = true }
sha1 = { version = "0.10", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { workspace = true, optional = true, features = ["tracing_backend", "metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { workspace = true, optional = true, features = ["tracing_backend"] }
